[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dass"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "p_tqdm>=1.3.3,<2.0.0",
    "matplotlib>=3.5.1,<4.0.0",
    "jupyter",
    "numpy",
    "pandas>=2.0.0",
    "scipy>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "nbconvert",
    "ipykernel",
    "nbmake",
]

[tool.setuptools.packages.find]
include = ["dass*"]
